unpackaged/main/default/objects/FSL_SLA_Violation_History__c/FSL_SLA_Violation_History__c.object-meta.xml
<CustomObject>
    <label>FSL SLA Violation History</label>
    <nameField>
        <displayFormat>SLA-{000000}</displayFormat>
        <label>FSL SLA Violation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSL SLA Violation Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>