unpackaged/main/default/objects/FSL_SLA_Violation_History__c/fields/FSL_Case__c.field-meta.xml
<CustomField>
    <fullName>FSL_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>FSL SLA Violation Histories</relationshipLabel>
    <relationshipName>FSL_SLA_Violation_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>