unpackaged/main/default/objects/FSL_SLA_Violation_History__c/fields/FSL_Reason__c.field-meta.xml
<CustomField>
    <fullName>FSL_Reason__c</fullName>
    <label>Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>