unpackaged/main/default/objects/FSL_SLA_Violation_History__c/fields/FSL_Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>FSL_Resolution_Time__c</fullName>
    <label>Resolution Time</label>
    <type>DateTime</type>
</CustomField>