unpackaged/main/default/objects/FSL_SLA_Violation_History__c/fields/FSL_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>FSL_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>FSL SLA Violation Histories</relationshipLabel>
    <relationshipName>FSL_SLA_Violation_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>