unpackaged/main/default/objects/FSL_SLA_Violation_History__c/fields/FSL_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>FSL_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>FSL SLA Violation Histories</relationshipLabel>
    <relationshipName>FSL_SLA_Violation_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>