unpackaged/main/default/objects/FSL_SLA_Violation_History__c/fields/FSL_Type__c.field-meta.xml
<CustomField>
    <fullName>FSL_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Violation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>