unpackaged/main/default/objects/FSL_SLA_Violation_History__c/fields/FSL_User__c.field-meta.xml
<CustomField>
    <fullName>FSL_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FSL_SLA_Violation_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>