unpackaged/main/default/objects/FSL_SLA_Violation_History__c/fields/FSL_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>FSL_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>FSL SLA Violation Histories</relationshipLabel>
    <relationshipName>FSL_SLA_Violation_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>