unpackaged/main/default/objects/FSL_SLA_Violation_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FSL_Work_Order__c</columns>
    <columns>FSL_Reason__c</columns>
    <columns>FSL_Type__c</columns>
    <columns>FSL_Service_Territory__c</columns>
    <columns>FSL_Service_Resource__c</columns>
    <columns>FSL_User__c</columns>
    <columns>FSL_Resolution_Time__c</columns>
    <columns>FSL_Case__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>